@@ -235,6 +235,10 @@ Changes in behaviour which may result in build errors
 3.2.5: (released 2024-??-??)
 ----------------------------
 
+wxGTK:
+
+- Improve desktop environment detection, notably under Wayland (#24050).
+
 
 3.2.4: (released 2023-11-11)
 ----------------------------
